Added angular ghpages

--- a/angular.json
+++ b/angular.json
@@ -121,6 +121,9 @@
               "devServerTarget": "loan-app:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }},
